[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyloki-logger"
version = "0.1.0"
description = "Non-blocking Python client for sending logs to Grafana Loki"
requires-python = ">=3.11"
dependencies = ["httpx"]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src/loki_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"
packages = ["loki_client"]
